<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- description: app name -->
    <string name="app_name">FRESH!</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <!-- description: text on cancel button in product edit view -->
    <string name="menu_cancel">Cancel</string>
    <!-- description: text on save button in product edit view -->
    <string name="menu_save">Save</string>

    <string name="img_loaded_flag" translatable="false">true</string>
    <string name="product_provider_authority" translatable="false">com.yugegong.reminder.productprovider</string>
    <string name="transition_product_img" translatable="false">transition_product_img</string>
    
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>

    <string name="tab_fresh">Fresh</string>
    <string name="tab_expired">Expired</string>
    <string name="tab_used">Used</string>

    <string name="notif_title">Action needed!</string>
    <string name="notif_product_expiring_desc"><xliff:g id="product_name" example="Milk">%s</xliff:g> will be expired in <xliff:g id="day_count" example="3">%d days!</xliff:g></string>
    <string name="notif_product_expiring_today_desc"><xliff:g id="product_name" example="Milk">%s</xliff:g> will be expired today!</string>
    <string name="notif_product_expired_desc"><xliff:g id="product_name" example="Milk">%s</xliff:g> has already been expired!</string>
    <string name="notif_action_used">Used</string>
    <string name="notif_action_dismiss">Remind later</string>
    <string name="notif_action_unknown">Unknown action</string>

    <string name="hint_product_name">Product name</string>
    <string name="hint_created_date">Created date</string>
    <string name="hint_expired_date">Expired date</string>

    <string name="expires_on">EXPIRES ON</string>
    <string name="detail_product_used">Already used</string>

</resources>
