<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/product_edit_root"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_margin="32dp"
    android:gravity="center_vertical">

    <FrameLayout
        android:id="@+id/product_image_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:background="@color/colorBackground"
        android:foreground="@drawable/touch_ripple">
        <com.yugegong.reminder.ProductImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/product_image"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_a_photo_black_48dp"
            android:transitionName="@string/transition_product_img"
            custom:imgLoaded="false" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_name">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/product_name"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_created_date">
                <view class="com.yugegong.reminder.ProductEditFragment$DatePickEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:fontFamily="sans-serif"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:id="@+id/created_time"
                    custom:dateType="startDate"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_expired_date">
                <view class="com.yugegong.reminder.ProductEditFragment$DatePickEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:inputType="textNoSuggestions"
                    android:id="@+id/expired_time"
                    custom:dateType="endDate"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkbox_is_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/detail_product_used"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>